--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -23,7 +23,6 @@
 }
 
 .search {
-  width: 361px;
   height: var(--search-height);
   background-color: rgba(22, 24, 35, 0.06);
   border: 1px solid transparent;
@@ -54,7 +53,20 @@
   }
 }
 
-.clear, .spinner {
+.search,
+.search-result {
+  width: 361px;
+}
+
+.search-title {
+  padding: 5px 12px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: rgba(22, 24, 35, 0.5);
+}
+
+.clear,
+.spinner {
   color: rgba(22, 24, 35, 0.34);
   padding: 0 12px 0 4px;
 }
