--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -73,6 +73,18 @@
 
 .spinner {
   display: none;
+  animation: spin 1.5s linear infinite;
+  padding: 0;
+  margin-top: 8px;
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
 }
 
 .search-button {
