--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -119,3 +119,15 @@
     color: rgba(22, 24, 35, 0.34);
   }
 }
+
+.more-button{
+  font-size: 2rem;
+  margin-left: 28px;
+  background-color: transparent;
+  padding: 4px 8px;
+}
+
+// Menu
+.menu-items{
+  width: 224px;
+}
