--- a/src/component/Globalstyle/GlobalStyles.scss
+++ b/src/component/Globalstyle/GlobalStyles.scss
@@ -7,6 +7,7 @@
   // Default Layout
   --defaultLayout-header-height: 60px;
   --defaultLayout-header-width: 1150px;
+  --defaultLayout-horizontal-spacer: 20px;
   --black: #000;
   --input-text-color: rgb(22, 24, 35);
   --text-color: rgba(22, 24, 35, 1);
@@ -39,4 +40,26 @@ input,
 
 a[href] {
   color: var(--text-color);
+}
+
+// Custom Tippy Tooltip
+body {
+  .tippy-box {
+    background-color: rgba(84, 84, 84, 0.92);
+    min-height: 38px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 22px;
+  }
+
+  .tippy-arrow {
+    color: rgba(84, 84, 84, 0.92) !important;
+  }
+
+  .tippy-box[data-placement^='bottom'] > .tippy-arrow {
+    top: -1px;
+  }
 }
