--- a/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -5,6 +5,7 @@
 }
 
 .container {
+  padding: 0 var(--defaultLayout-horizontal-spacer);
   width: var(--defaultLayout-header-width);
   display: flex;
 }
