--- a/src/component/Globalstyle/GlobalStyles.scss
+++ b/src/component/Globalstyle/GlobalStyles.scss
@@ -1,5 +1,4 @@
 @import 'normalize-css';
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Roboto:wght@100;300;700&display=swap');
 
 :root {
   --primary: #fe2c55;
@@ -19,8 +18,34 @@
   padding: 0;
 }
 
+//Font embed
+@font-face {
+  font-family: ProximaNova;
+  src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: ProximaNova;
+  src: url('/assets/fonts/ProximaNova-Semibold.woff2');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: ProximaNova;
+  src: url('/assets/fonts/Proxima-Nova-Bold.woff');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: SofiaPro;
+  src: url('/assets/fonts/sofiapro-bold.woff');
+  font-weight: 700;
+}
+
+// Global CSS
 body {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'ProximaNova', sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
   color: var(--text-color);
