--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -20,6 +20,7 @@
 
 .logo {
   display: flex;
+  min-width: 300px;
   align-items: center;
 }
 
@@ -116,7 +117,7 @@
   }
 
   .search-icon {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     color: rgba(22, 24, 35, 0.34);
   }
 }
@@ -125,6 +126,8 @@
 .action {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: 270px;
 }
 
 .action-btn {
@@ -154,4 +157,15 @@
 // Menu
 .menu-items {
   width: 224px;
+}
+
+// Custom Button CSS
+.upload-btn {
+  border: 1px solid rgba(22, 24, 35, 0.12) !important;
+  max-width: 114px;
+  span {
+    font-size: 1.6rem;
+    color: rgb(22, 24, 35);
+    font-weight: 600;
+  }
 }
