--- a/src/component/Layout/components/AccountItem/AccountItem.module.scss
+++ b/src/component/Layout/components/AccountItem/AccountItem.module.scss
@@ -4,8 +4,8 @@
   padding: 6px 16px;
   cursor: pointer;
 
-  &:hover{
-    background-color: rgba(22,24, 35, 0.03);
+  &:hover {
+    background-color: rgba(22, 24, 35, 0.03);
   }
 }
 
