--- a/src/component/Layout/components/AccountItem/AccountItem.module.scss
+++ b/src/component/Layout/components/AccountItem/AccountItem.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: center;
   padding: 6px 16px;
+  text-decoration: none;
+  margin: 0;
+  outline: none;
+  border: none;
   cursor: pointer;
 
   &:hover {
