--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -27,113 +27,6 @@
   min-width: 300px;
   align-items: center;
 }
-
-.search {
-  height: var(--search-height);
-  background-color: rgba(22, 24, 35, 0.06);
-  border: 1px solid transparent;
-  position: relative;
-  border-radius: var(--search-border-radius);
-  padding-left: 16px;
-  display: flex;
-
-  input {
-    height: 100%;
-    color: var(--input-text-color);
-    font-size: 1.6rem;
-    border: none;
-    background-color: transparent;
-    outline: none;
-    line-height: 22px;
-    padding: 12px 12px 12px 0;
-    caret-color: var(--primary);
-    flex: 1;
-  }
-
-  input:not(:placeholder-shown) ~ .search-button .search-icon {
-    color: rgba(22, 24, 35, 0.75);
-  }
-
-  &:focus-within {
-    border: 1px solid rgb(210, 211, 213);
-  }
-}
-
-.search,
-.search-result {
-  width: 361px;
-}
-
-.search-title {
-  padding: 5px 12px;
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: rgba(22, 24, 35, 0.5);
-}
-
-.clear,
-.spinner {
-  color: rgba(22, 24, 35, 0.34);
-  padding: 0 12px 0 4px;
-  position: absolute;
-  right: 50px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.clear {
-  // display: none;
-}
-
-.spinner {
-  // display: none;
-  // animation: spin 1.5s linear infinite;
-  // padding: 0;
-  // margin-top: 8px;
-
-  @keyframes spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-}
-
-.search-button {
-  position: relative;
-  width: var(--search-button-width);
-  height: 100%;
-  border-top-right-radius: var(--search-border-radius);
-  border-bottom-right-radius: var(--search-border-radius);
-
-  &:hover {
-    background-color: rgba(22, 24, 35, 0.03);
-  }
-
-  &:active {
-    background-color: rgba(22, 24, 35, 0.06);
-  }
-
-  &::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    display: block;
-    width: 1px;
-    height: calc(var(--search-height) - 18px);
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgb(215, 215, 217);
-  }
-
-  .search-icon {
-    font-size: 1.8rem;
-    color: rgba(22, 24, 35, 0.34);
-  }
-}
-
 // action
 .action {
   display: flex;
@@ -184,4 +77,8 @@
     color: rgb(22, 24, 35);
     font-weight: 600;
   }
+}
+
+.margin-left{
+  margin-left: 5px;
 }
