--- a/src/component/Globalstyle/GlobalStyles.scss
+++ b/src/component/Globalstyle/GlobalStyles.scss
@@ -88,3 +88,13 @@ body {
     top: -1px;
   }
 }
+
+.setBackground {
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-clip: center;
+  background-position: center;
+  background-image: url(https://cdn.dribbble.com/users/1026512/screenshots/10130839/waifu_laifu_404_copia_4x.png);
+}
