--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   font-size: 16px;
   font-weight: 700;
-  font-family: 'ProximaNova', sans-serif;
+  font-family: var(--font-family);
   padding: 9px 16px;
   min-width: 100px;
   min-height: 36px;
