--- a/src/component/Globalstyle/GlobalStyles.scss
+++ b/src/component/Globalstyle/GlobalStyles.scss
@@ -2,7 +2,7 @@
 
 :root {
   --primary: #fe2c55;
-
+  --font-family: 'ProximaNova', sans-serif;
   // Default Layout
   --defaultLayout-header-height: 60px;
   --defaultLayout-header-width: 1150px;
@@ -45,7 +45,7 @@
 
 // Global CSS
 body {
-  font-family: 'ProximaNova', sans-serif;
+  font-family: var(--font-family);
   font-size: 1.6rem;
   line-height: 1.5;
   color: var(--text-color);
@@ -65,6 +65,11 @@ input,
 
 a[href] {
   color: var(--text-color);
+  text-decoration: none;
+}
+
+a:focus {
+  outline: none;
 }
 
 // Custom Tippy Tooltip
