--- a/src/component/Layout/components/Search/Search.module.scss
+++ b/src/component/Layout/components/Search/Search.module.scss
@@ -14,6 +14,7 @@
     border: none;
     background-color: transparent;
     outline: none;
+    font-family: var(--font-family);
     line-height: 22px;
     padding: 12px 12px 12px 0;
     caret-color: var(--primary);
