--- a/src/component/Globalstyle/GlobalStyles.scss
+++ b/src/component/Globalstyle/GlobalStyles.scss
@@ -40,7 +40,7 @@
 @font-face {
   font-family: SofiaPro;
   src: url('/assets/fonts/sofiapro-bold.woff');
-  font-weight: 700;
+  font-weight: 500;
 }
 
 // Global CSS
@@ -102,4 +102,20 @@ body {
   background-clip: center;
   background-position: center;
   background-image: url(https://cdn.dribbble.com/users/1026512/screenshots/10130839/waifu_laifu_404_copia_4x.png);
+}
+
+// Scrollbar CSS
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(22, 24, 35, .06);
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
 }
