--- a/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -7,6 +7,7 @@
 .container {
   padding: 0 var(--defaultLayout-horizontal-spacer);
   width: var(--defaultLayout-header-width);
+  margin-top: 60px;
   display: flex;
 }
 
