--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -7,6 +7,11 @@
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
   display: flex;
   justify-content: center;
+  position: fixed;
+  background-color: white;
+  z-index: 10;
+  top: 0;
+  left: 0;
 }
 
 .inner {
