--- a/src/component/Popper/Popper.module.scss
+++ b/src/component/Popper/Popper.module.scss
@@ -5,6 +5,8 @@
   padding-top: 8px;
   border-radius: 8px;
   background: rgb(255, 255, 255);
-  box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
+  // box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
+  display: flex;
+  flex-direction: column;
   // overflow-y: scroll;
 }
