--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
   --search-height: 46px;
   --search-button-width: 52px;
   width: 100%;
+  min-width: 1366px;
   height: var(--defaultLayout-header-height);
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
   display: flex;
