--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -15,7 +15,7 @@
   user-select: none;
 
   + .wrapper {
-    margin-left: 8px;
+    margin-left: 16px;
   }
 
   &.disabled {
@@ -59,7 +59,7 @@
 
 .primary {
   background-color: var(--primary);
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 1) !important;
   border-color: var(--primary);
 
   &:hover {
