--- a/src/component/Globalstyle/GlobalStyles.scss
+++ b/src/component/Globalstyle/GlobalStyles.scss
@@ -112,10 +112,12 @@ html *::-webkit-scrollbar {
 
 html *::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: rgba(22, 24, 35, .06);
+  background-color: rgba(22, 24, 35, 0.06);
 }
 
 html *::-webkit-scrollbar-track {
   border-radius: 0;
   background-color: rgba(0, 0, 0, 0);
 }
+
+
