--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -5,8 +5,9 @@
 }
 
 .container {
-  padding: 0 var(--defaultLayout-horizontal-spacer);
+  // padding: 0 var(--defaultLayout-horizontal-spacer);
   width: var(--defaultLayout-header-width);
+  max-width: 100%;
   margin-top: 60px;
   display: flex;
 }
