--- a/src/component/Globalstyle/GlobalStyles.scss
+++ b/src/component/Globalstyle/GlobalStyles.scss
@@ -1,4 +1,7 @@
 @import 'normalize-css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --primary: #fe2c55;
@@ -112,7 +115,7 @@ html *::-webkit-scrollbar {
 
 html *::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: rgba(22, 24, 35, .06);
+  background-color: rgba(22, 24, 35, 0.06);
 }
 
 html *::-webkit-scrollbar-track {
